# cert-pepper

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  acronyms.md  pyproject.toml  study-plan.md
.claude/: settings.json
.claude/skills/: ci-watcher.md
.claude/skills/release/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
cert-pepper/: .env.example  .gitignore  README.md  pyproject.toml
cert-pepper/cert_pepper/: __init__.py  config.py
cert-pepper/cert_pepper/ai/: __init__.py  explainer.py
cert-pepper/cert_pepper/cli/: main.py  pregenerate.py  progress.py  study.py
cert-pepper/cert_pepper/engine/: __init__.py  bkt.py  fsrs.py  scorer.py
cert-pepper/cert_pepper/ingestion/: acronyms.py  flashcards.py  questions.py
cert-pepper/cert_pepper/mcp/: analytics.py  content.py
cert-pepper/cert_pepper/models/: analytics.py  progress.py
cert-pepper/tests/: __init__.py  test_db.py  test_fsrs.py  test_ingestion.py  test_models.py  test_prompts.py
cert_pepper/: __init__.py  __main__.py  config.py
cert_pepper/ai/: client.py  explainer.py  prompts.py
cert_pepper/cli/: exam.py  flashcards.py  goal.py  main.py  pregenerate.py  progress.py  study.py
cert_pepper/db/: connection.py  exams.py  goals.py  schema.sql
cert_pepper/engine/: fsrs.py  scorer.py  selector.py
cert_pepper/ingestion/: __init__.py  acronyms.py  exam_yaml.py  flashcards.py  loader.py  questions.py
cert_pepper/mcp/: analytics.py  content.py  study_engine.py
cert_pepper/models/: analytics.py  content.py  progress.py
docs/: content-format.md  security-plus-in-10-days.md  walkthrough.md
docs/assets/: demo.tape
docs/superpowers/plans/: 2026-04-15-flashcard-command.md
docs/superpowers/specs/: 2026-04-15-flashcard-command-design.md  2026-05-10-alabama-permit-content-pack-design.md  2026-05-10-exam-generation-size-tier-design.md  2026-05-10-multi-exam-study-selection-design.md
domains/3-security-architecture/: notes.md
domains/4-security-operations/: notes.md
domains/5-program-management-oversight/: notes.md
examples/secai-plus/: acronyms.md  exam.yaml
examples/secai-plus/flashcards/: key-concepts.md
examples/secai-plus/practice-questions/: domain1-practice.md  domain2-practice.md  domain3-practice.md  domain4-practice.md
examples/security-plus/: README.md  acronyms.md  exam.yaml
examples/security-plus/domains/1-general-security-concepts/: notes.md
examples/security-plus/domains/2-threats-vulnerabilities-mitigations/: notes.md
examples/security-plus/flashcards/: key-concepts.md
examples/security-plus/practice-questions/: domain1-practice.md  domain2-practice.md  domain3-practice.md  domain4-practice.md  domain5-practice.md
flashcards/: key-concepts.md
tests/: conftest.py  test_bkt.py  test_db.py  test_exam_cli.py  test_exam_yaml.py  test_exams.py  test_flashcards.py  test_goals.py  test_loader.py  test_main_module.py  test_mcp_servers.py  test_mcp_study_engine.py  test_models.py  test_multi_exam_integration.py  test_pregenerate.py  test_progress.py  test_prompts.py  test_scorer.py  test_selector.py  test_setup_exam.py  test_study.py
