[project]
name = "cert-pepper"
dynamic = ["version"]
description = "AI-powered adaptive certification prep that learns what you don't know."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "cert-pepper contributors" }]
keywords = ["certification", "study", "spaced-repetition", "adaptive", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.34.0",
    "mcp[cli]>=1.0.0",
    "mistune>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/cert-pepper/cert-pepper"
Repository = "https://github.com/cert-pepper/cert-pepper"
Changelog = "https://github.com/cert-pepper/cert-pepper/blob/main/CHANGELOG.md"
Issues = "https://github.com/cert-pepper/cert-pepper/issues"

[project.scripts]
cert-pepper = "cert_pepper.cli.main:app"
cert-pepper-study-mcp = "cert_pepper.mcp.study_engine:serve"
cert-pepper-content-mcp = "cert_pepper.mcp.content:serve"
cert-pepper-analytics-mcp = "cert_pepper.mcp.analytics:serve"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cert_pepper/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
