[project]
name = "cert-pepper"
version = "0.1.0"
description = "AI-powered adaptive certification prep that learns what you don't know."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.34.0",
    "mcp[cli]>=1.0.0",
    "mistune>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cert-pepper = "cert_pepper.cli.main:app"
cert-pepper-study-mcp = "cert_pepper.mcp.study_engine:serve"
cert-pepper-content-mcp = "cert_pepper.mcp.content:serve"
cert-pepper-analytics-mcp = "cert_pepper.mcp.analytics:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
